--- a/config.json
+++ b/config.json
@@ -17,62 +17,62 @@
       "role": "村民",
       "model_name": "gpt-4.1",
       "api_key": "",
-      "base_url": "https://ai.keep.fm/v1"
+      "base_url": ""
     },
     {
       "role": "狼人",
       "model_name": "gpt-4.1",
       "api_key": "",
-      "base_url": "https://ai.keep.fm/v1"
+      "base_url": ""
     },
     {
       "role": "女巫",
       "model_name": "gpt-4.1",
       "api_key": "",
-      "base_url": "https://ai.keep.fm/v1"
+      "base_url": ""
     },
     {
       "role": "村民",
       "model_name": "gpt-4.1",
       "api_key": "",
-      "base_url": "https://ai.keep.fm/v1"
+      "base_url": ""
     },
     {
       "role": "狼人",
       "model_name": "gpt-4.1",
       "api_key": "",
-      "base_url": "https://ai.keep.fm/v1"
+      "base_url": ""
     },
     {
       "role": "村民",
       "model_name": "gpt-4.1",
       "api_key": "",
-      "base_url": "https://ai.keep.fm/v1"
+      "base_url": ""
     },
     {
       "role": "猎人",
       "model_name": "gpt-4.1",
       "api_key": "",
-      "base_url": "https://ai.keep.fm/v1"
+      "base_url": ""
     },
     {
       "role": "预言家",
       "model_name": "gpt-4.1",
       "api_key": "",
-      "base_url": "https://ai.keep.fm/v1"
+      "base_url": ""
     },
     {
       "role": "狼人",
       "model_name": "gpt-4.1",
       "api_key": "",
-      "base_url": "https://ai.keep.fm/v1"
+      "base_url": ""
     }
   ],
   "models": [
     {
       "model_name": "gpt-4.1",
       "api_key": "",
-      "base_url": "https://ai.keep.fm/v1"
+      "base_url": ""
     },
     {
       "model_name": "qwen-max-2025-01-25",
@@ -88,7 +88,7 @@
     },
     {
       "model_name": "deepseek-chat",
-      "api_key": "sk-40fc5dbaa2994823b1a615e03cb42fd1"
+      "api_key": "你的API_KEY5"
     },
     {
       "model_name": "moonshot-v1-32k",
@@ -102,7 +102,7 @@
   "judge": {
     "model_name": "gpt-4.1",
     "api_key": "",
-    "base_url": "https://ai.keep.fm/v1"
+    "base_url": ""
   },
   "random_model": false,
   "randomize_roles": false,
